added detail and not found pages

--- a/aaron-favorite-music/Pages/MusicAlbums/List.cshtml
+++ b/aaron-favorite-music/Pages/MusicAlbums/List.cshtml
@@ -4,8 +4,20 @@
     ViewData["Title"] = "List";
 }
 
-<h2>List</h2>
-
+<h2>Music Albums</h2>
+<form method="get">
+    <div class="form-group">
+        <div class="input-group">
+            <input type="search" class="form-control" 
+            asp-for="SearchTerm">
+            <span class="input-group-btn">
+                <button class="btn btn-default">
+                <i class="glyphicon glyphicon-search"></i>
+                </button>
+            </span>
+        </div>
+    </div>
+</form>
 
 
 <table class="table">
@@ -17,6 +29,13 @@
             <td>@musucAlbum.Artist</td>
             <td>@musucAlbum.Genre</td>
             <td>@musucAlbum.YearRelase</td>
+            <td>
+                <a class="btn btn-lg" 
+                        asp-page="./Detail" 
+                        asp-route-musicAlbumId="@musucAlbum.Id">
+                    <i class="glyphicon glyphicon-zoom-in"></i>
+                </a>
+            </td>
         </tr>
     }
 </table>
