--- a/aaron-favorite-music/Pages/Shared/_Layout.cshtml
+++ b/aaron-favorite-music/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">aaron_favorite_music</a>
+                <a asp-page="/Index" class="navbar-brand">Aaron's Favorite Music</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -45,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - aaron_favorite_music</p>
+            <p>&copy; 2019 - Aaron's Favorite Music</p>
         </footer>
     </div>
 
