added sql server support with EF core for sql server v2.1

--- a/aaron-favorite-music/Pages/MusicAlbums/Edit.cshtml
+++ b/aaron-favorite-music/Pages/MusicAlbums/Edit.cshtml
@@ -1,4 +1,4 @@
-@page  "{musicAlbumId:int}"
+@page  "{musicAlbumId:int?}"
 @model aaron_favorite_music.Pages.MusicAlbums.EditModel
 @{
     ViewData["Title"] = "Edit";
