--- a/aaron-favorite-music/Pages/MusicAlbums/Detail.cshtml
+++ b/aaron-favorite-music/Pages/MusicAlbums/Detail.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Detail";
 }
 
+
+@if (Model.Message != null)
+{
+    <div class="alert alert-info">@Model.Message</div>
+}
+
 <h2>@Model.MusicAlbum.AlbumName</h2>
 <div>
     Id:@Model.MusicAlbum.Id
