--- a/aaron-favorite-music/Pages/MusicAlbums/List.cshtml
+++ b/aaron-favorite-music/Pages/MusicAlbums/List.cshtml
@@ -43,8 +43,15 @@
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
             </td> 
+           <td>
+                <a class="btn btn-lg" 
+                        asp-page="./Edit" 
+                        asp-route-musicAlbumId="@musucAlbum.Id">
+                    <i class="glyphicon glyphicon-delete"></i>
+                </a>
+            </td>             
         </tr>
     }
 </table>
-
+<a asp-page="./Edit" class="btn btn-primary">Add New</a>
 <div>@Model.Message</div>
