--- a/aaron-favorite-music/Pages/MusicAlbums/List.cshtml
+++ b/aaron-favorite-music/Pages/MusicAlbums/List.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "List";
 }
 
+@if (Model.Message != null)
+{
+    <div class="alert alert-info">@Model.Message</div>
+}
+
 <h2>Music Albums</h2>
 <form method="get">
     <div class="form-group">
@@ -19,8 +24,13 @@
     </div>
 </form>
 
+@foreach(var musicAlbum in Model.MusicAlbums)
+{
+    <partial name="_Summary" Model="musicAlbum"/>
+}
 
-<table class="table">
+
+<!-- <table class="table">
     @foreach (var musucAlbum in Model.MusicAlbums)
     {
         <tr>
@@ -35,23 +45,23 @@
                         asp-route-musicAlbumId="@musucAlbum.Id">
                     <i class="glyphicon glyphicon-zoom-in"></i>
                 </a>
-            </td>
-           <td>
                 <a class="btn btn-lg" 
                         asp-page="./Edit" 
                         asp-route-musicAlbumId="@musucAlbum.Id">
                     <i class="glyphicon glyphicon-edit"></i>
                 </a>
-            </td> 
-           <td>
                 <a class="btn btn-lg" 
-                        asp-page="./Edit" 
+                        asp-page="./Delete" 
                         asp-route-musicAlbumId="@musucAlbum.Id">
-                    <i class="glyphicon glyphicon-delete"></i>
+                    <i class="glyphicon glyphicon-trash"></i>
                 </a>
             </td>             
         </tr>
     }
-</table>
+</table> -->
+
 <a asp-page="./Edit" class="btn btn-primary">Add New</a>
-<div>@Model.Message</div>
+
+@section footer {
+    <div>@Model.ConfigMessage</div>
+}
