--- a/aaron-favorite-music/Pages/Shared/_Layout.cshtml
+++ b/aaron-favorite-music/Pages/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
+            <vc:Music-album-count></vc:Music-album-count>
             @RenderSection("footer", required: false)
             <p>&copy; 2019 - Aaron's Favorite Music</p>
         </footer>
