--- a/aaron-favorite-music/Pages/MusicAlbums/Delete.cshtml
+++ b/aaron-favorite-music/Pages/MusicAlbums/Delete.cshtml
@@ -1,7 +1,7 @@
 @page "{musicAlbumId:int}"
 @model aaron_favorite_music.Pages.MusicAlbums.DeleteModel
 @{
-
+    ViewData["Title"] = "Delete Album";
 }
     <h2>Delete!</h2>
     <div class="alert alert-danger">
