--- a/aaron-favorite-music/Pages/_ViewImports.cshtml
+++ b/aaron-favorite-music/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using aaron_favorite_music
 @namespace aaron_favorite_music.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, aaron-favorite-music
