--- a/aaron-favorite-music/Pages/MusicAlbums/Edit.cshtml
+++ b/aaron-favorite-music/Pages/MusicAlbums/Edit.cshtml
@@ -38,3 +38,7 @@
 
 <button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
